--- a/deno.json
+++ b/deno.json
@@ -6,5 +6,13 @@
     ],
     "include": [],
     "entrypoint": "main.ts"
+  },
+  "tasks": {
+    "start": "deno run --allow-read --allow-write --allow-net --env --allow-env main.ts "
+  },
+  "scopes": {
+    "https://raw.githubusercontent.com/Zhomart/dex/": {
+      "https://deno.land/std/": "https://deno.land/std@0.177.0/"
+    }
   }
 }
