--- a/deno.json
+++ b/deno.json
@@ -14,5 +14,8 @@
     "https://raw.githubusercontent.com/Zhomart/dex/": {
       "https://deno.land/std/": "https://deno.land/std@0.177.0/"
     }
+  },
+  "imports": {
+    "@neon/serverless": "jsr:@neon/serverless@^1.0.0"
   }
 }
